--- a/src/app/admin/components/products/detail-product/detail-product.component.html
+++ b/src/app/admin/components/products/detail-product/detail-product.component.html
@@ -8,7 +8,7 @@
   </div> 
   <div class="col-md-6">
 
-    <img *ngIf="imageBlobUrl" [src]="imageBlobUrl" [alt]="product.description">
+    <img *ngIf="imageBlobUrl" width="150" height="150" [src]="imageBlobUrl" [alt]="product.description">
 
   </div>
 
