--- a/src/app/admin/components/providers/detail-provider/detail-provider.component.html
+++ b/src/app/admin/components/providers/detail-provider/detail-provider.component.html
@@ -6,7 +6,7 @@
   </div> 
   <div class="col-md-6">
 
-    <img width="130px" height="130px" *ngIf="imageBlobUrl" [src]="imageBlobUrl" [alt]="provider.name">
+    <img *ngIf="imageBlobUrl" width="150" height="150" [src]="imageBlobUrl" [alt]="provider.name">
 
   </div>
 
