--- a/src/assets/sb-admin/_login.scss
+++ b/src/assets/sb-admin/_login.scss
@@ -2,22 +2,22 @@
 // Toshi the dog from https://unsplash.com/@charlesdeluvio - what a funny dog...
 
 .bg-login-image {
-  background: url('https://source.unsplash.com/_aBujp24PIw/600x800');
+  background: url('../img/login.jpeg');
   background-position: center;
   background-size: cover;
 }
 
-.bg-register-image {
-  background: url('https://source.unsplash.com/rRZul_m3fB0/600x800');
-  background-position: center;
-  background-size: cover;
-}
+// .bg-register-image {
+//   background: url('https://source.unsplash.com/rRZul_m3fB0/600x800');
+//   background-position: center;
+//   background-size: cover;
+// }
 
-.bg-password-image {
-  background: url('https://source.unsplash.com/f2dW6ACvLrw/600x800');
-  background-position: center;
-  background-size: cover;
-}
+// .bg-password-image {
+//   background: url('https://source.unsplash.com/f2dW6ACvLrw/600x800');
+//   background-position: center;
+//   background-size: cover;
+// }
 
 form.user {
 
